--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Simplenews Roles x.x-x.x, xxxx-xx-xx
 
 Simplenews Roles 6.x-2.x, xxxx-xx-xx
 ------------------------------------
+#622104 by peterbarnett: Fixed bug with subs updating queries only taking first result.
 #600040 by joachim: don't allow users to subscribe to newletters their 
   role doesn't sync to.
 by joachim: Removed implementation of hook_theme: no theme functions.
