--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Simplenews Roles x.x-x.x, xxxx-xx-xx
 
 Simplenews Roles 6.x-2.x, xxxx-xx-xx
 ------------------------------------
+#683906 by joachim: Fixed sync request not getting reset.
 #555924 by joachim: Removed removal of newsletter footers.
 #622104 by peterbarnett: Fixed bug with subs updating queries only taking first result.
 #600040 by joachim: don't allow users to subscribe to newletters their 
