--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ Simplenews Roles x.x-x.x, xxxx-xx-xx
 
 Simplenews Roles 6.x-2.x, xxxx-xx-xx
 ------------------------------------
+#683884 by joachim: Added checking of all content types on (redundant) hook_nodeapi.
 #683906 by joachim: Fixed sync request not getting reset.
 #555924 by joachim: Removed removal of newsletter footers.
 #622104 by peterbarnett: Fixed bug with subs updating queries only taking first result.
